<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/dp_24">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/text_select_language"
                android:textColor="@color/colorOtpText"
                android:textSize="@dimen/dp_18"
                android:textStyle="bold" />

            <!--<ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo" />-->
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey" />

        <RadioGroup
            android:id="@+id/rg_select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_language_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/colorApp"
                android:layoutDirection="rtl"
                android:text="@string/text_language_english"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/rb_language_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/colorApp"
                android:layoutDirection="rtl"
                android:text="@string/text_language_arabic"
                android:textAlignment="textStart" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGrey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancel_select_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hollow_btn_background"
                android:text="@string/text_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorGreyText" />

            <Button
                android:id="@+id/btn_ok_change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_background"
                android:text="@string/text_ok"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>