<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.bickupdriver.activity.SettingsActivity">

    <include layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            style="@style/mediumTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/txt_notification"
            android:textColor="@color/grey_text_color" />


        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:padding="10dp"
            android:theme="@style/SwitchCompatTheme" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/greyColor" />

    <RelativeLayout
        android:id="@+id/layout_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            style="@style/mediumTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/edit_profile"
            android:textColor="@color/grey_text_color" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/greyColor" />

    <RelativeLayout
        android:id="@+id/layout_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            style="@style/mediumTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/text_change_language"
            android:textColor="@color/grey_text_color" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/greyColor" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_75"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/text_enter_mobile"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/btn_red"
            android:paddingBottom="@dimen/dp_14"
            android:text="@string/txt_logout"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </RelativeLayout>


</LinearLayout>
