<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.app.bickupdriver.fragments.ResetPassword">

    <RelativeLayout
        android:id="@+id/reset_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_heading_reset"
            style="@style/heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="8dp"
            android:text="@string/txt_head_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heading_reset"
            android:layout_marginTop="@dimen/dp_22"
            android:textColorHint="@color/text_heading_color"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edt_new_password_reset"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm/\!@#$%*|?"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="0dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_new_password"
            android:layout_marginTop="@dimen/dp_18"
            android:textColorHint="@color/text_heading_color"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edt_confirm_password_reset"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm/\!@#$%*|?"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit__reset"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_75"
            android:layout_below="@+id/text_confirm_password"
            android:layout_marginEnd="-4dp"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="@dimen/dp_18"
            android:paddingBottom="@dimen/dp_14"
            android:stateListAnimator="@null"
            android:text="@string/txt_submit"
            android:textAllCaps="false" />

    </RelativeLayout>

    <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_view"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:visibility="gone"
        app:cpv_animAutostart="true"
        app:cpv_color="@color/appcolor"
        app:cpv_indeterminate="true" />

</FrameLayout>
