<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_chooseimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15">

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/text_select_resource"
            android:textColor="@color/grey_text_color"
            android:textSize="@dimen/dp_16" />

        <LinearLayout
            android:id="@+id/layoutchooseoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_choose"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"

                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"

                    android:text="@string/text_camera"
                    android:textColor="@color/grey_text_color"
                    android:textSize="@dimen/dp_15" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/greyColor" />

            <LinearLayout
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_gallery"
                    android:textColor="@color/grey_text_color"
                    android:textSize="@dimen/dp_15" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>